err/galry.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/galry'...
Compiling './lib/python3.5/site-packages/galry/colors.py'...
***   File "./lib/python3.5/site-packages/galry/colors.py", line 96
    print get_color(['r','y.5'])
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/galry/cursors'...
Listing './lib/python3.5/site-packages/galry/icons'...
Listing './lib/python3.5/site-packages/galry/managers'...
Listing './lib/python3.5/site-packages/galry/processors'...
Listing './lib/python3.5/site-packages/galry/test'...
Listing './lib/python3.5/site-packages/galry/test/autosave'...
Compiling './lib/python3.5/site-packages/galry/tools.py'...
***   File "./lib/python3.5/site-packages/galry/tools.py", line 108
    print "Running %s..." % file
                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/galry/visuals'...
Listing './lib/python3.5/site-packages/galry/visuals/fontmaps'...
Listing './lib/python3.5/site-packages/galry-0.3.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
